--- a/estilos.css
+++ b/estilos.css
@@ -5,8 +5,11 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
+    background-color: #e8f0f8;
+    color: #333333;
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
 }
 
 .container {
@@ -16,25 +19,36 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-}
-
-header h1 {
+    background: #2b4c7e;
+    color: white;
+    padding: 2rem;
     text-align: center;
 }
 
+header h1, header h2 {
+    text-align: center;
+}
+
+header h1 {
+    margin-bottom: 10px;
+}   
+
+header h2 {
+    font-size: 1.2em;
+}
+
 nav {
-    background-color: #333;
-    padding: 10px 0;
+    background-color: #1a3050;
+    padding: 1rem;
 }
 
 nav ul {
     list-style: none;
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    gap: 2rem;
+    margin: 0;
+    padding: 0;
 }
 
 nav ul li {
@@ -42,19 +56,28 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: white;
     text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+nav a:hover {
+    background-color: #4682b4;
 }
 
 main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 10px;
+    max-width: 1200px;  
+    margin: 2rem auto;
+    padding: 0 1rem;
+    display: grid;
+    grid-template-columns: 7fr 3fr;
+    gap: 2rem;
 }  
 
 section {
-    flex: 3;
+    flex: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,43 +85,63 @@ section {
 }
 
 article {
-    flex: 2;
-    background-color: #fff;
-    margin: 5px;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background: white;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin-bottom: 2rem;
     width: 100%;
 }
 
 article h2 {
-    color: #333;
+    color: #2b4c7e;
+    border-bottom: 2px solid #4682b4;
+    
 }
 
 article p {
+    padding-top: 10px;
     color: #666;
 }
 
+article h3 {
+    color: #2b4c7e;
+    padding-top: 10px;
+}   
+
+article img {
+    width: 100%;
+    border-radius: 8px;
+    margin-top: 10px;
+}
 aside {
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background: white;
+    padding: 1.5rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    height: fit-content;
+    max-width: 800px;
+    margin: 0px 0px 5px 0px;
 }
 
 aside h2 {
-    color: #333;
+    color: #2b4c7e;
 }   
 
-aside {
-    flex: 1;
-    max-width: 300px;
-    margin: 5px 0px 5px 10px;
+aside ul    {
+    padding-left: 20px;
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #1a3050;
+    color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 1rem;
+    margin-top: 2rem;
+}
+
+iframe {
+    margin-top: 10px;
+    width: 100%;
+    border-radius: 8px;
 }
